<resources>
    <string name="app_name">SwipeToEat</string>
    <string name="restaurant_grid_image">restaurant grid image</string>
    <string name="enter_zipcode">Enter Zipcode:</string>
    <string name="desired_cuisine">Desired Cuisine:</string>
    <string name="desired_time_to_eat">Desired Time to Eat:</string>
    <string name="select_time">Select Time</string>
    <string name="start_swiping">Start Swiping</string>
    <string name="swipe_to_eat">Swipe to Eat</string>
    <string name="todo">TODO</string>
    <string name="none_available">There are no available restaurants open at the location you entered, for the time you entered. Please modify your preferences and try again!</string>
    <string name="swiped_all">WOOHOO! You are done swiping. Click the button below to proceed!</string>
    <string name="swiped_all_land">WOOHOO! You are done swiping. Click "done swiping" to proceed!</string>
    <string name="go_back">Go Back</string>
    <string name="done_swiping">Done Swiping</string>
    <string name="reset">Reset</string>
    <string name="thumbs_up">thumbs up animation on swipe right</string>
    <string name="thumbs_down">thumbs down animation on swipe left</string>
    <string name="lets_swipe">Let\'s Swipe!</string>
    <string name="left_arrow">left arrow on koloda</string>
    <string name="right_arrow">right arrow on koloda</string>
    <string name="casa_de_mariscos">Casa de Mariscos</string>
    <string name="surprise_me_image">image of restaurant generated from surprise me</string>
    <string name="surprise_me_pin">location pin on surprise me page</string>
    <string name="back">Back</string>
    <string name="zipcode">zipcode</string>
    <string name="location_pin">location pin</string>
    <string name="logo_image">logo image</string>
    <string name="find_your_restaurant">Find your Restaurant</string>
    <string name="surprise_me">Surprise Me</string>
    <string name="start_over">Start Over</string>
    <string name="done">done</string>
    <string name="loading_image_for_delay">loading image for delay</string>
</resources>