<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout  xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_height="match_parent"
    tools:context=".SwipeActivity">
    <com.google.android.material.card.MaterialCardView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:cardElevation="4dp"
        app:cardCornerRadius="4dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center_horizontal">


            <ImageView
                android:id="@+id/restaurant_grid_image"
                android:layout_width="174dp"
                android:layout_height="174dp"
                android:contentDescription="@string/restaurant_grid_image"
                android:scaleType="centerCrop"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.023" />

            <TextView
                android:id="@+id/restaurant_grid_name"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:autoSizeStepGranularity="2sp"
                android:autoSizeTextType="uniform"
                android:fontFamily="sans-serif-condensed-medium"
                android:scaleType="centerCrop"
                android:textAlignment="viewStart"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@id/restaurant_grid_image"
                app:layout_constraintTop_toBottomOf="@id/restaurant_grid_image"
                app:layout_constraintVertical_bias="0.05"
                android:text="@string/casa_de_mariscos"
                tools:targetApi="o" />

            <TextView
                android:id="@+id/restaurant_grid_distance"
                android:layout_width="match_parent"
                android:layout_height="25dp"
                android:autoSizeMaxTextSize="30sp"
                android:autoSizeMinTextSize="11sp"
                android:autoSizeStepGranularity="2sp"
                android:autoSizeTextType="uniform"
                android:gravity="center"
                android:scaleType="centerCrop"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="@id/restaurant_grid_name"
                app:layout_constraintTop_toBottomOf="@+id/restaurant_grid_location"
                app:layout_constraintVertical_bias="0.0"
                tools:targetApi="o"
                tools:text="3 miles from current location" />

            <TextView
                android:id="@+id/restaurant_grid_location"
                android:layout_width="265dp"
                android:layout_height="40dp"
                android:autoSizeStepGranularity="2sp"
                android:autoSizeTextType="uniform"
                android:fontFamily="sans-serif-medium"
                android:gravity="start"
                android:scaleType="centerCrop"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toEndOf="@id/location_pin"
                app:layout_constraintTop_toBottomOf="@+id/restaurant_grid_reviews"
                app:layout_constraintVertical_bias="0.076"
                tools:targetApi="o"
                tools:text="1234 Rio Grande St, Austin TX 78705" />

            <TextView
                android:id="@+id/restaurant_grid_reviews"
                android:layout_width="100dp"
                android:layout_height="30dp"
                android:layout_marginStart="4dp"
                android:layout_marginTop="12dp"
                android:autoSizeStepGranularity="2sp"
                android:autoSizeTextType="uniform"
                android:fontFamily="sans-serif-light"
                android:gravity="start"
                android:scaleType="centerCrop"
                app:layout_constraintStart_toEndOf="@id/review_star_image"
                app:layout_constraintTop_toBottomOf="@+id/restaurant_grid_name"
                tools:targetApi="o"
                tools:text="1234 reviews" />

            <Button
                android:id="@+id/back"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:scaleType="centerCrop"
                android:text="@string/back"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.07"
                app:layout_constraintStart_toStartOf="parent" />

            <ImageView
                android:id="@+id/review_star_image"
                android:layout_width="34dp"
                android:layout_height="32dp"
                android:contentDescription="@string/surprise_me_image"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/restaurant_grid_name"
                app:layout_constraintVertical_bias="0.025"
                app:srcCompat="@android:drawable/star_big_on" />

            <ImageView
                android:id="@+id/location_pin"
                android:layout_width="34dp"
                android:layout_height="32dp"
                android:contentDescription="@string/surprise_me_pin"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/restaurant_grid_reviews"
                app:layout_constraintVertical_bias="0.074"
                app:srcCompat="@drawable/ic_baseline_pin_drop_24" />

        </androidx.constraintlayout.widget.ConstraintLayout>


    </com.google.android.material.card.MaterialCardView>


</androidx.constraintlayout.widget.ConstraintLayout>